--- a/tweepydeck.glade
+++ b/tweepydeck.glade
@@ -5,6 +5,7 @@
   <widget class="GtkWindow" id="TweepyMainWindow">
     <property name="visible">True</property>
     <property name="title" translatable="yes">TweepyDeck</property>
+    <property name="icon_name">preferences-desktop-multimedia</property>
     <signal name="size_request" handler="on_TweepyMainWindow_size_request"/>
     <child>
       <widget class="GtkVBox" id="OuterVBox">
@@ -135,7 +136,9 @@
                 <child>
                   <widget class="GtkToolButton" id="ToolbarSearchButton">
                     <property name="visible">True</property>
+                    <property name="label" translatable="yes">Searches</property>
                     <property name="stock_id">gtk-find</property>
+                    <signal name="clicked" handler="on_ToolbarSearchButton_clicked"/>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -251,13 +254,29 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkStatusbar" id="TweepyStatusBar">
+              <widget class="GtkHBox" id="StatusAndProgressHBox">
                 <property name="visible">True</property>
+                <child>
+                  <widget class="GtkStatusbar" id="TweepyStatusBar">
+                    <property name="visible">True</property>
+                    <property name="spacing">2</property>
+                  </widget>
+                  <packing>
+                    <property name="fill">False</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkProgressBar" id="StatusProgressBar">
+                    <property name="visible">True</property>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
               </widget>
               <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="pack_type">end</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -434,6 +453,125 @@
             <property name="expand">False</property>
             <property name="pack_type">end</property>
             <property name="position">0</property>
+          </packing>
+        </child>
+      </widget>
+    </child>
+  </widget>
+  <widget class="GtkWindow" id="SearchesWindow">
+    <property name="title" translatable="yes">TweepyDeck Searches</property>
+    <property name="default_width">300</property>
+    <property name="default_height">250</property>
+    <property name="icon_name">system-search</property>
+    <child>
+      <widget class="GtkVBox" id="SearchWindowOuterVBox">
+        <property name="visible">True</property>
+        <property name="orientation">vertical</property>
+        <child>
+          <widget class="GtkScrolledWindow" id="SearchItemsScrolledWindow">
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="hscrollbar_policy">automatic</property>
+            <property name="vscrollbar_policy">automatic</property>
+            <child>
+              <widget class="GtkTreeView" id="SearchItemsTreeView">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="headers_visible">False</property>
+              </widget>
+            </child>
+          </widget>
+          <packing>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkVBox" id="SearchWindowInnerVBox">
+            <property name="visible">True</property>
+            <property name="orientation">vertical</property>
+            <property name="homogeneous">True</property>
+            <child>
+              <widget class="GtkEntry" id="SearchTermEntry">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="invisible_char">&#x25CF;</property>
+                <property name="caps_lock_warning">False</property>
+              </widget>
+              <packing>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkHButtonBox" id="SearchItemsButtonBox">
+                <property name="visible">True</property>
+                <property name="spacing">6</property>
+                <property name="layout_style">start</property>
+                <child>
+                  <widget class="GtkButton" id="SearchItemAddButton">
+                    <property name="label">gtk-add</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="use_stock">True</property>
+                    <signal name="clicked" handler="on_SearchItemAddButton_clicked"/>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkButton" id="SearchItemRemoveButton">
+                    <property name="label">gtk-remove</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="use_stock">True</property>
+                    <signal name="clicked" handler="on_SearchItemRemoveButton_clicked"/>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkHButtonBox" id="SearchWindowButtonBox">
+            <property name="visible">True</property>
+            <property name="spacing">6</property>
+            <property name="layout_style">end</property>
+            <child>
+              <widget class="GtkButton" id="SearchWindowCloseButton">
+                <property name="label">gtk-close</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+                <signal name="clicked" handler="on_SearchWindowCloseButton_clicked"/>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </widget>
