--- a/tweepydeck.glade
+++ b/tweepydeck.glade
@@ -116,27 +116,9 @@
                 <property name="visible">True</property>
                 <property name="toolbar_style">both</property>
                 <child>
-                  <widget class="GtkToolButton" id="ToolbarRefreshButton">
-                    <property name="visible">True</property>
-                    <property name="stock_id">gtk-refresh</property>
-                  </widget>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="homogeneous">True</property>
-                  </packing>
-                </child>
-                <child>
-                  <widget class="GtkSeparatorToolItem" id="ToolbarSeparatorOne">
-                    <property name="visible">True</property>
-                  </widget>
-                  <packing>
-                    <property name="expand">False</property>
-                  </packing>
-                </child>
-                <child>
                   <widget class="GtkToolButton" id="ToolbarSearchButton">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">Searches</property>
+                    <property name="label" translatable="yes">Search</property>
                     <property name="stock_id">gtk-find</property>
                     <signal name="clicked" handler="on_ToolbarSearchButton_clicked"/>
                   </widget>
@@ -198,6 +180,8 @@
                 <child>
                   <widget class="GtkHBox" id="DeckHBox">
                     <property name="visible">True</property>
+                    <property name="spacing">1</property>
+                    <property name="homogeneous">True</property>
                     <child>
                       <placeholder/>
                     </child>
@@ -359,6 +343,7 @@
                         <property name="can_focus">True</property>
                         <property name="visibility">False</property>
                         <property name="invisible_char">&#x25CF;</property>
+                        <property name="activates_default">True</property>
                       </widget>
                       <packing>
                         <property name="left_attach">1</property>
@@ -435,109 +420,42 @@
       </widget>
     </child>
   </widget>
-  <widget class="GtkWindow" id="SearchesWindow">
-    <property name="title" translatable="yes">TweepyDeck Searches</property>
-    <property name="default_width">300</property>
-    <property name="default_height">250</property>
-    <property name="icon_name">system-search</property>
-    <child>
-      <widget class="GtkVBox" id="SearchWindowOuterVBox">
+  <widget class="GtkDialog" id="SearchDialog">
+    <property name="border_width">5</property>
+    <property name="resizable">False</property>
+    <property name="modal">True</property>
+    <property name="type_hint">normal</property>
+    <property name="has_separator">False</property>
+    <child internal-child="vbox">
+      <widget class="GtkVBox" id="SearchDialogVBox">
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
         <child>
-          <widget class="GtkScrolledWindow" id="SearchItemsScrolledWindow">
+          <widget class="GtkEntry" id="SearchTermEntry">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
-            <child>
-              <widget class="GtkTreeView" id="SearchItemsTreeView">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="headers_visible">False</property>
-              </widget>
-            </child>
-          </widget>
-          <packing>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <widget class="GtkVBox" id="SearchWindowInnerVBox">
-            <property name="visible">True</property>
-            <property name="orientation">vertical</property>
-            <property name="homogeneous">True</property>
-            <child>
-              <widget class="GtkEntry" id="SearchTermEntry">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="invisible_char">&#x25CF;</property>
-                <property name="caps_lock_warning">False</property>
-              </widget>
-              <packing>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <widget class="GtkHButtonBox" id="SearchItemsButtonBox">
-                <property name="visible">True</property>
-                <property name="spacing">6</property>
-                <property name="layout_style">start</property>
-                <child>
-                  <widget class="GtkButton" id="SearchItemAddButton">
-                    <property name="label">gtk-add</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="use_stock">True</property>
-                    <signal name="clicked" handler="on_SearchItemAddButton_clicked"/>
-                  </widget>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
-                    <property name="position">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <widget class="GtkButton" id="SearchItemRemoveButton">
-                    <property name="label">gtk-remove</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="use_stock">True</property>
-                    <signal name="clicked" handler="on_SearchItemRemoveButton_clicked"/>
-                  </widget>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
-                    <property name="position">1</property>
-                  </packing>
-                </child>
-              </widget>
-              <packing>
-                <property name="expand">False</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
+            <property name="invisible_char">&#x25CF;</property>
+            <property name="activates_default">True</property>
           </widget>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">False</property>
             <property name="position">1</property>
           </packing>
         </child>
-        <child>
-          <widget class="GtkHButtonBox" id="SearchWindowButtonBox">
+        <child internal-child="action_area">
+          <widget class="GtkHButtonBox" id="SearchDialogButtons">
             <property name="visible">True</property>
-            <property name="spacing">6</property>
             <property name="layout_style">end</property>
             <child>
-              <widget class="GtkButton" id="SearchWindowCloseButton">
-                <property name="label">gtk-close</property>
+              <widget class="GtkButton" id="SearchDialogCancel">
+                <property name="label">gtk-cancel</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-                <signal name="clicked" handler="on_SearchWindowCloseButton_clicked"/>
+                <signal name="clicked" handler="on_SearchDialogCancel_clicked"/>
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -545,10 +463,26 @@
                 <property name="position">0</property>
               </packing>
             </child>
+            <child>
+              <widget class="GtkButton" id="SearchDialogOkay">
+                <property name="label">gtk-ok</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+                <signal name="clicked" handler="on_SearchDialogOkay_clicked"/>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">2</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </widget>
